--- a/styles/style.css
+++ b/styles/style.css
@@ -101,3 +101,42 @@ nav li a {
         flex-direction: column;
     }
 }
+
+/* main style */
+
+main {
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+/* teams section */
+
+.teams-container {
+    display: flex;
+    align-items: center;
+}
+
+.teams-img-container {
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 1.5rem;
+}
+
+.teams-content {
+    padding-right: 70px;
+    padding-left: 70px;
+}
+
+.teams-content-title {
+    font-size: 2.8rem;
+}
+
+.teams-content-title .quick-list {
+    color: #727272;
+    font-weight: 500;
+}
+
+.text-fuatures {
+    color: #FF900E;
+    font-weight: 700;
+}
