--- a/styles/style.css
+++ b/styles/style.css
@@ -22,6 +22,10 @@
     cursor: pointer;
 }
 
+.text-gray {
+    color: #727272;
+}
+
 /* header section style */
 
 header {
@@ -71,42 +75,17 @@ nav li a {
     color: #131313;
 }
 
-.banner-description {
-    color: #727272;
-    font-weight: 400;
-}
 
 .banner img {
     width: 100%;
     margin-top: 20px;
 }
 
-
-/* responsive part */
-
-@media screen and (max-width: 576px) {
-    header {
-        padding: 20px;
-    }
-    nav {
-        flex-direction: column;
-    }
-}
-
-@media screen and (min-width:576px) and (max-width:960px) {
-    header {
-        padding: 50px;
-    }
-    nav {
-        flex-direction: column;
-    }
-}
-
 /* main style */
 
 main {
     max-width: 1440px;
-    margin: 0 auto;
+    margin: 70px auto;
 }
 
 /* teams section */
@@ -118,7 +97,7 @@ main {
 
 .teams-img-container {
     display: grid;
-    grid-template-columns: repeat(2,1fr);
+    grid-template-columns: repeat(2, 1fr);
     gap: 1.5rem;
 }
 
@@ -132,11 +111,42 @@ main {
 }
 
 .teams-content-title .quick-list {
-    color: #727272;
     font-weight: 500;
 }
 
 .text-fuatures {
     color: #FF900E;
     font-weight: 700;
+}
+
+
+/* responsive part */
+
+@media screen and (max-width: 576px) {
+    header {
+        padding: 20px;
+    }
+
+    nav,
+    .teams-container {
+        flex-direction: column;
+    }
+
+    .teams-img-container {
+        grid-template-columns: 1fr;
+    }
+    .teams-content {
+        padding-right: 20px;
+        padding-left: 20px;
+    }
+}
+
+@media screen and (min-width:576px) and (max-width:960px) {
+    header {
+        padding: 50px;
+    }
+
+    nav,.teams-container {
+        flex-direction: column;
+    }
 }
