--- a/styles/style.css
+++ b/styles/style.css
@@ -22,6 +22,12 @@
     cursor: pointer;
 }
 
+.section-title {
+    color: #131313;
+    font-size: 2.8rem;
+    font-weight: 700;
+}
+
 .text-gray {
     color: #727272;
 }
@@ -37,12 +43,6 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
-
-.nav-title {
-    color: #131313;
-    font-size: 2.8rem;
-    font-weight: 700;
 }
 
 nav ul {
